ChatView: Fixed vertical alignment of loader.

--- a/client/ide/styl/ide.chat.styl
+++ b/client/ide/styl/ide.chat.styl
@@ -147,6 +147,7 @@ pmLinkColor   = #B6B6B6
       border                none
       rounded               6px
       margin-top            1px
+
       &.watching
         background          #24B444
 
@@ -171,8 +172,10 @@ pmLinkColor   = #B6B6B6
 
 
 .ide
+
   .avatars
     margin-right            5px
+
     .avatarview
       display               inline-block
       margin                7px 3px 0
@@ -185,5 +188,15 @@ pmLinkColor   = #B6B6B6
     font-size               13px
 
     .kdloader
+      abs()
       height                24px
-      margin                250px 0 10px
+      margin                -25px 0 10px
+      top                   50%
+      left                  0
+
+    .label
+      abs()
+      top                   50%
+      width                 100%
+      margin-top            10px
+      color                 #6a6a6a
